# http-file-server

./: .gitignore  Dockerfile  pyproject.toml  readme.md  server.py
