[tool.poetry]
name = "http-file-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
gunicorn = "^20.1.0"
diskcache = "^5.3.0"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
docker-compose = "^1.29.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
